assets/css/style.css
/*-------------------------- Import Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');

body {
    background-color: #fff;
    margin: 0 auto;
    font-size: 16px;
}

h1 {
    font-family: 'Trajan-Pro-3', serif;
    padding-top: 6rem;
    color: #fafafa;
    font-size: 2.5rem;
    text-transform: uppercase;
    letter-spacing: 2px;
}

#score {
    font-family: 'Trajan-Pro-3', serif;
    text-transform: uppercase;
    color: #DBD8D8;
    text-align: center;
    font-size: 20px;
}
 
#question {
    font-family: 'Trajan-Pro-3', serif;
    font-size: 1.5rem;
    color: #fafafa;
    padding-top: 90px;
    padding-left: 30px;
    padding-right: 30px;
    margin: 0px auto;
}
 

.buttons {
    padding: 20px 20px;
    text-align: center;
    vertical-align: middle;
    display: inline-grid;
    font-family: 'Trajan-Pro-3', serif;
    text-transform: uppercase;
}
 
button#btn0, button#btn1, button#btn2, button#btn3 {
    background-color: #000;
    width: 250px;
    font-size: 1.1rem;
    color: #fff;
    margin: 20px 40px 20px 40px;
    padding: 20px 20px;
    border: 1px solid #000;
}
 
button#btn0:hover, button#btn1:hover, button#btn2:hover, button#btn3:hover {
    cursor: pointer;
    background-color: #b00d0d;
}
 
button#btn0:focus, button#btn1:focus, button#btn2:focus, button#btn3:focus {
    outline: 0;
}
 
#progress {
    color: #DBD8D8;
    text-shadow: 1px 2px #2F2F2F;
    font-size: 20px;
    text-align: center;
    margin-top: 4rem;
    padding-top: 20px;
    font-family: 'Trajan-Pro-3', serif;
    padding-bottom: 20px;
}

.quiz-container {
    height: 50vh;
    font-family: 'Futura-PT', sans-serif;
    background-color: #000;
    text-align: center;
}

.answer-container {
    height: 50vh;
    font-family: 'Futura-PT', sans-serif;
    background-color: #5e0808;
    text-align: center;
}

.col-md-6 {
    padding-left: 0;
    padding-right: 0;
    margin: 0 auto;
}

@media only screen and (min-width: 768px) {
    .quiz-container {
        height: 100vh;
        font-family: 'Futura-PT', sans-serif;
        background-color: #000;
        text-align: center;
    } 
    #question {
        font-size: 25px;
        color: #fafafa;
        padding-top: 230px;
        padding-left: 20px;
        padding-right: 20px;
        padding-bottom: 20px;
        margin: 0px 80px;
    }
    .buttons {
        margin-top: 150px;
        padding: 20px 20px;
        text-align: center;
        vertical-align: middle;
        display: inline-grid;
    } 
    .answer-container {
        height: 100vh;
        font-family: 'Futura-PT', sans-serif;
        background-color: #5e0808;
        text-align: center;
    }
    #progress {
        color: #fafafa;
        font-size: 18px;
        text-align: center;
        margin-top: 40px;
        padding-top: 20px;
    }
    button#btn0, button#btn1, button#btn2, button#btn3 {
        background-color: #000;
        width: 300px;
        font-size: 1.5rem;
        color: #fff;
        margin: 20px 40px 20px 40px;
        padding: 20px 20px;
        border: 1px solid #000;
    }
    h1 {
        font-family: 'Trajan-Pro-3', serif;
        padding-top: 15rem;
        color: #fafafa;
        font-size: 2.5rem;
        text-transform: uppercase;
        letter-spacing: 2px;
    }
}

